<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天元号</string>
    <!-- 主界面 -->
    <string name="h_earning">收益</string>
    <string name="h_dynamic">动态</string>
    <string name="h_main">首页</string>
    <string name="h_about">关于</string>
    <string name="h_my">我的</string>

    <!-- 主页-我的 -->
    <string name="t_home_house_deal">房产交易</string>
    <string name="t_home_deal_state">交易状态</string>
    <string name="t_home_identity_auth">身份认证</string>
    <string name="t_home_file_data">文件资料</string>
    <string name="t_home_perfect_data">完善资料</string>
    <string name="t_home_mystore_up">我的收藏</string>
    <string name="t_home_invite_friend">邀请好友</string>
    <string name="t_home_vip_line">贵宾专线</string>
    <string name="t_home_system_set">系统设置</string>

    <!-- 收益-详情管理 -->
    <string name="t_earning_manage_property_info">物业信息</string>
    <string name="t_earning_manage_tenant_manage">租客管理</string>
    <string name="t_earning_manage_earnings_search">物管秘书</string>
    <string name="t_earning_manage_call_property">收益查询</string>
    <string name="t_earning_manage_pay_duty_info">联系物管</string>
    <string name="t_earning_manage_sell_property">纳税信息</string>
    <string name="t_earning_manage_pay_duty_info_add">出售物业</string>
    <string name="t_earning_manage_sell_property_add">服务状态</string>

    <!-- 首页-查询 -->
    <string name="t_search_title">输入关键字/地址</string>
    <string name="t_search_input_keyinfo">请输入城市/地区/关键字收缩</string>
    <string name="t_search_country_select">国家选择</string>
    <string name="t_search_area_select">区域选择</string>
    <string name="t_search_property_type">物业类型</string>
    <string name="t_search_price_scope">价格范围</string>
    <string name="t_country_usa">美国</string>
    <string name="t_country_jp">日本</string>
    <string name="t_country_ao">澳大利亚</string>
    <string name="t_country_en">英国</string>
    <string name="t_search_result">搜索结果</string>

    <!-- 通用部分 -->
    <string name="linked_server_error">无法链接到服务器,请检查你的网络设置或稍后重试!</string>
    <string name="network_error">网速不给力哦,请检查您的网络设置!</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refresh_lasttime">最近更新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pull_to_top_flag_bottom">风控内外多重监管保障</string>
    <string name="more">更多</string>
    <string name="update">检查更新中</string>
    <string name="loading">正在加载更多&#8230;</string>
    <string name="exit">再按一次退出程序</string>
    <string name="logn">登录</string>
    <string name="global_good">全球精品</string>

    <!-- 按钮常使用 -->
    <string name="h_tips">提示</string>
    <string name="b_ensure">确定</string>
    <string name="b_send">发送</string>
    <string name="b_cancel">取消</string>
    <string name="b_save">保存</string>
    <string name="b_done">完成</string>
    <string name="hint_inputkey">请输入关键字</string>
    <string name="b_delete">删除</string>
    <string name="b_add">添加</string>
    <string name="b_open">打开</string>
    <string name="b_retry">加载失败，点击重试</string>
    <string name="b_refresh">点击刷新</string>
    <string name="b_login">登录</string>
    <string name="b_forgetpwd">忘记密码</string>
    <string name="b_tologin">立即登录</string>
    <string name="b_toregister">完成注册</string>
    <string name="t_unlogin">你还没有登录，请点击按钮立即登录</string>
    <string name="base_countdown_text">重新获取\n%s秒</string>
    <string name="b_getcode">获取验证码</string>

    <!-- 手势密码 -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern_again">请再次绘制锁屏图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">请绘制锁屏图案，至少连接4个点</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="set_gesture_retry">重新设置</string>

</resources>