<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        style="@style/custom_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_blue"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/t_unlogin" />

    <Button
        android:id="@+id/button_login"
        style="@style/custom_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:text="@string/b_tologin" />
    <Button
        android:id="@+id/button_register"
        style="@style/custom_button_style"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:text="@string/b_toregister" 
        android:visibility="gone"/>

</LinearLayout>