<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/tab_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout1" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:orientation="vertical" >

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_light"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/tab_rg_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/title_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="1dp"
                android:paddingTop="4dp" >

                <RadioButton
                    android:id="@+id/tab_rb_1"
                    style="@style/tab_rb_style"
                    android:checked="true"
                    android:drawableTop="@drawable/selector_page_01"
                    android:text="@string/h_main" />

                <RadioButton
                    android:id="@+id/tab_rb_2"
                    style="@style/tab_rb_style"
                    android:drawableTop="@drawable/selector_page_02"
                    android:text="@string/h_earning" />

                <RadioButton
                    android:id="@+id/tab_rb_3"
                    style="@style/tab_rb_style"
                    android:drawableTop="@drawable/selector_page_03"
                    android:text="@string/h_dynamic" />

                <RadioButton
                    android:id="@+id/tab_rb_4"
                    style="@style/tab_rb_style"
                    android:drawableTop="@drawable/selector_page_04"
                    android:text="@string/h_about" />

                <RadioButton
                    android:id="@+id/tab_rb_5"
                    style="@style/tab_rb_style"
                    android:drawableTop="@drawable/selector_page_05"
                    android:text="@string/h_my" />
            </RadioGroup>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_tips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:visibility="gone" >
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>