<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gesture_bg" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:visibility="gone" >

        <TextView
            android:id="@+id/include_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setup_gesture_code"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <!--
             <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="取消"
            android:textSize="18sp"
            android:textColor="@color/white" />
        -->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/gesture_tip_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_user_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/text_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="@string/set_gesture_pattern"
            android:textColor="@color/text_white" />

        <com.echuang.tianyuanhao.gesture.LockIndicator
            android:id="@+id/lock_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gesture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gesture_tip_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" >
    </FrameLayout> 

    <!--
         <TextView
        android:id="@+id/text_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/gesture_container"
        android:layout_marginTop="20dip"
        android:text="@string/set_gesture_pattern_reason"
        android:textColor="#816E6A" />
    -->

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="30dp"
        android:gravity="center_horizontal"
        android:text="@string/b_cancel"
        android:textColor="#C79B82"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dip"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/set_gesture_retry"
        android:textColor="#C79B82"
        android:textSize="16sp" />

</RelativeLayout>